status report (#11)
* status report
