# storageapi/swagger.yml
@@ -2,7 +2,7 @@ swagger: "2.0"
 
 info:
   title: Storage
-  version: 1.3.0
+  version: 1.4.0
 
 basePath: /
 schemes:
@@ -13,11 +13,11 @@ definitions:
   StatusReport:
     type: object
     properties:
-      lcwInfo:
+      lcw_info:
           type: string
-      kasseStatus:
+      kasse_status:
           $ref: '#/definitions/Status'
-      kasseInfo:
+      kasse_info:
           type: string
       stations:
           type: array
@@ -146,6 +146,28 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/StatusReport'
+        500:
+          description: internal error
+
+  /add-service-amount:
+    post:
+      operationId: "addServiceAmount"
+      parameters:
+        - name: args
+          required: true
+          in: body
+          schema:
+            type: object
+            properties:
+              hash:
+                type: string
+              amount:
+                type: integer
+      responses:
+        204:
+          description: OK
+        404:
+          description: not found
         500:
           description: internal error
 
